--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,6 @@ build/
 *.vssscc
 .builds
 *.pidb
-*.log
 *.scc
 
 # Visual C++ cache files
@@ -146,3 +145,4 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+/_gsdata_/
