Refactoring of skeleton hierarchy for local/global and ui/backend settings so that: -> implementations are contained neatly in nested classes -> the UISettings classes handle their own loading of both default settings and saved settings in their constructors -> the backend owns and maintains its own settings structure (backend settings will not even be cached in the UI layer).
Also, provide a stub Setting class, defined in the backend, from which both a BackendSetting and UISetting class is derived, and have the implementation classes simply maintain, internally, a vector of these Settings.  The Setting class must be copyable, for now.  Plan to use Boost.PropertyTree as temporary variables only to load XML from a file - NOT to store the data permanently in any Settings class.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Model\ModelManager.h" />
     <ClInclude Include="Settings\GlobalSettings.h" />
     <ClInclude Include="Settings\ProjectSettings.h" />
+    <ClInclude Include="Settings\Setting.h" />
     <ClInclude Include="Settings\Settings.h" />
     <ClInclude Include="Settings\SettingsManager.h" />
     <ClInclude Include="test.h" />
@@ -88,6 +89,7 @@
     <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Settings\GlobalSettings.cpp" />
     <ClCompile Include="Settings\ProjectSettings.cpp" />
+    <ClCompile Include="Settings\Setting.cpp" />
     <ClCompile Include="Settings\Settings.cpp" />
     <ClCompile Include="Settings\SettingsManager.cpp" />
     <ClCompile Include="test.cpp" />
