Refactored Settings (project/global, UI/backend) all the way down to a single basemost "SettingsRepository" templatized class, overcoming Qt's limitation (that a template class cannot derive from QObject) by having the nested implementation class become a template that derives from the new SettingsRepository class.  This new SettingsRepository class is the single place that declares the std::map<> of user settings (templatized on project/global and UI/backend setting type and enum).

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -81,7 +81,7 @@
     <ClInclude Include="Settings\Setting.h" />
     <ClInclude Include="Settings\Settings.h" />
     <ClInclude Include="Settings\SettingsManager.h" />
-    <ClInclude Include="Settings\SettingsParser.h" />
+    <ClInclude Include="Settings\SettingsRepository.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="Utilities\NewGeneException.h" />
   </ItemGroup>
@@ -93,7 +93,7 @@
     <ClCompile Include="Settings\Setting.cpp" />
     <ClCompile Include="Settings\Settings.cpp" />
     <ClCompile Include="Settings\SettingsManager.cpp" />
-    <ClCompile Include="Settings\SettingsParser.cpp" />
+    <ClCompile Include="Settings\SettingsRepository.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="Utilities\NewGeneException.cpp" />
   </ItemGroup>
