--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Documents\DocumentManager.h" />
+    <ClInclude Include="Messager\Messager.h" />
     <ClInclude Include="Model\ModelManager.h" />
     <ClInclude Include="Settings\GlobalSettings.h" />
     <ClInclude Include="Settings\ProjectSettings.h" />
@@ -87,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Documents\DocumentManager.cpp" />
+    <ClCompile Include="Messager\Messager.cpp" />
     <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Settings\GlobalSettings.cpp" />
     <ClCompile Include="Settings\ProjectSettings.cpp" />
