Create stub derived "input project"/"output project" (and ditto for project settings) classes in the backend, in preparation for templatizing and deriving the corresponding UI-layer classes.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -117,6 +117,18 @@
     <ClInclude Include="Project\Project.h">
       <Filter>Header Files\Project</Filter>
     </ClInclude>
+    <ClInclude Include="Project\ProjectInput.h">
+      <Filter>Header Files\Project</Filter>
+    </ClInclude>
+    <ClInclude Include="Project\ProjectOutput.h">
+      <Filter>Header Files\Project</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings\ProjectInputSettings.h">
+      <Filter>Header Files\Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings\ProjectOutputSettings.h">
+      <Filter>Header Files\Settings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
@@ -168,6 +180,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Project\Project.cpp">
+      <Filter>Source Files\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="Project\ProjectInput.cpp">
+      <Filter>Source Files\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="Project\ProjectOutput.cpp">
+      <Filter>Source Files\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="Settings\ProjectInputSettings.cpp">
+      <Filter>Source Files\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="Settings\ProjectOutputSettings.cpp">
       <Filter>Source Files\Project</Filter>
     </ClCompile>
   </ItemGroup>
