Integrate separate "input dataset" and "output dataset" classes into the UI layer - backend layer hierarchy.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -81,12 +81,12 @@
     <ClInclude Include="Messager\Messager.h" />
     <ClInclude Include="Model\ModelManager.h" />
     <ClInclude Include="Project\Project.h" />
-    <ClInclude Include="Project\ProjectInput.h" />
+    <ClInclude Include="Project\InputProject.h" />
     <ClInclude Include="Project\ProjectManager.h" />
-    <ClInclude Include="Project\ProjectOutput.h" />
+    <ClInclude Include="Project\OutputProject.h" />
     <ClInclude Include="Settings\GlobalSettings.h" />
-    <ClInclude Include="Settings\ProjectInputSettings.h" />
-    <ClInclude Include="Settings\ProjectOutputSettings.h" />
+    <ClInclude Include="Settings\InputProjectSettings.h" />
+    <ClInclude Include="Settings\OutputProjectSettings.h" />
     <ClInclude Include="Settings\ProjectSettings.h" />
     <ClInclude Include="Settings\Setting.h" />
     <ClInclude Include="Settings\Settings.h" />
@@ -104,12 +104,12 @@
     <ClCompile Include="Messager\Messager.cpp" />
     <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Project\Project.cpp" />
-    <ClCompile Include="Project\ProjectInput.cpp" />
+    <ClCompile Include="Project\InputProject.cpp" />
     <ClCompile Include="Project\ProjectManager.cpp" />
-    <ClCompile Include="Project\ProjectOutput.cpp" />
+    <ClCompile Include="Project\OutputProject.cpp" />
     <ClCompile Include="Settings\GlobalSettings.cpp" />
-    <ClCompile Include="Settings\ProjectInputSettings.cpp" />
-    <ClCompile Include="Settings\ProjectOutputSettings.cpp" />
+    <ClCompile Include="Settings\InputProjectSettings.cpp" />
+    <ClCompile Include="Settings\OutputProjectSettings.cpp" />
     <ClCompile Include="Settings\ProjectSettings.cpp" />
     <ClCompile Include="Settings\Setting.cpp" />
     <ClCompile Include="Settings\Settings.cpp" />
